@@ -98,32 +98,32 @@ be_visitor_interface_tie_ss::visit_interface (be_interface *node)
   *os << "template <class T>" << be_nl
       << fulltiename << "<T>::" << localtiename << " (T &t)" << be_nl
       << "\t: ptr_ (&t)," << be_nl
-      << "\t  poa_ (PortableServer::POA::_nil ())," << be_nl
-      << "\t  rel_ (0)" << be_nl
+      << "\t  poa_ ( ::PortableServer::POA::_nil ())," << be_nl
+      << "\t  rel_ (false)" << be_nl
       << "{}" << be_nl << be_nl;
 
   *os << "template <class T> " << be_nl
       << fulltiename << "<T>::" << localtiename
-      << " (T &t, PortableServer::POA_ptr poa)" << be_nl
+      << " (T &t, ::PortableServer::POA_ptr poa)" << be_nl
       << "\t: ptr_ (&t)," << be_nl
-      << "\t  poa_ (PortableServer::POA::_duplicate (poa))," << be_nl
-      << "\t  rel_ (0)" << be_nl
+      << "\t  poa_ ( ::PortableServer::POA::_duplicate (poa))," << be_nl
+      << "\t  rel_ (false)" << be_nl
       << "{}" << be_nl << be_nl;
 
   *os << "template <class T>" << be_nl
       << fulltiename << "<T>::" << localtiename
       << " (T *tp, ::CORBA::Boolean release)" << be_nl
       << "\t: ptr_ (tp)," << be_nl
-      << "\t  poa_ (PortableServer::POA::_nil ())," << be_nl
+      << "\t  poa_ ( ::PortableServer::POA::_nil ())," << be_nl
       << "\t  rel_ (release)" << be_nl
       << "{}" << be_nl << be_nl;
 
   *os << "template <class T>" << be_nl
       << fulltiename << "<T>::" << localtiename
-      << " (T *tp, PortableServer::POA_ptr poa, ::CORBA::Boolean release)"
+      << " (T *tp, ::PortableServer::POA_ptr poa, ::CORBA::Boolean release)"
       << be_nl
       << "\t: ptr_ (tp)," << be_nl
-      << "\t  poa_ (PortableServer::POA::_duplicate (poa))," << be_nl
+      << "\t  poa_ ( ::PortableServer::POA::_duplicate (poa))," << be_nl
       << "\t  rel_ (release)" << be_nl
       << "{}" << be_nl << be_nl;
 
@@ -150,7 +150,7 @@ be_visitor_interface_tie_ss::visit_interface (be_interface *node)
       << "delete this->ptr_;" << be_uidt_nl
       << "}" << be_uidt_nl << be_nl
       << "this->ptr_ = &obj;" << be_nl
-      << "this->rel_ = 0;" << be_uidt_nl
+      << "this->rel_ = false;" << be_uidt_nl
       << "}" << be_nl << be_nl;
 
   *os << "template <class T> void" << be_nl
@@ -184,14 +184,14 @@ be_visitor_interface_tie_ss::visit_interface (be_interface *node)
       << "{" << be_idt_nl
       << "if (! ::CORBA::is_nil (this->poa_.in ()))" << be_idt_nl
       << "{" << be_idt_nl
-      << "return PortableServer::POA::_duplicate (this->poa_.in ());"
+      << "return ::PortableServer::POA::_duplicate (this->poa_.in ());"
       << be_uidt_nl
       << "}" << be_uidt_nl << be_nl
       << "return this->" << localskelname
       << "::_default_POA ();" << be_uidt_nl
       << "}";
 
-  int status =
+  int const status =
     node->traverse_inheritance_graph (
               be_visitor_interface_tie_ss::method_helper,
               os
